--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,53 +1,56 @@
 cmake_minimum_required(VERSION 3.10) 
 
 # set the project name 
-project(EggyEngine)
+set(PROJECT_NAME EggyEngine)
+project(${PROJECT_NAME})
 
 # set character set to unicode
 ADD_DEFINITIONS(-DUNICODE)
 
 # preset common directory path
-set(CODE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Engine/Source)
-set(LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Engine/External)
+set(SOURCE_CODE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Engine/Source)
+set(EXTERNAL_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Engine/External)
+set(LIBRARY_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Library)
 
 
 # get all header / source files
-file (GLOB_RECURSE HEADER_LIST "${CODE_SOURCE_DIR}/*.h")
-file (GLOB_RECURSE SOURCE_LIST "${CODE_SOURCE_DIR}/*.cpp")
+file (GLOB_RECURSE HEADER_LIST "${SOURCE_CODE_ROOT}/*.h")
+file (GLOB_RECURSE SOURCE_LIST "${SOURCE_CODE_ROOT}/*.cpp")
 
 # add executable
 add_executable(EggyEngine ${SOURCE_LIST} ${HEADER_LIST})
 
 # group source / header files
-source_group(TREE ${CODE_SOURCE_DIR} PREFIX "Source Files" FILES ${SOURCE_LIST})
-source_group(TREE ${CODE_SOURCE_DIR} PREFIX "Header Files" FILES ${HEADER_LIST})
+source_group(TREE ${SOURCE_CODE_ROOT} PREFIX "Source Files" FILES ${SOURCE_LIST})
+source_group(TREE ${SOURCE_CODE_ROOT} PREFIX "Header Files" FILES ${HEADER_LIST})
 
 
 # additional include directories
 set(
     ADDITIONAL_INCLUDE_DIR
-    ${CODE_SOURCE_DIR}
-    ${LIBRARY_DIR}/SPIRV-Reflect
-    ${LIBRARY_DIR}/FBX/Include
-    ${LIBRARY_DIR}/tinyobjloader
-    ${LIBRARY_DIR}/glm
-    ${LIBRARY_DIR}/glfw/Include
-    ${LIBRARY_DIR}/VulkanSDK/Include
-    ${LIBRARY_DIR}/stb-master
-    ${LIBRARY_DIR}/boost/Include
-	${LIBRARY_DIR}/imgui
+    ${SOURCE_CODE_ROOT}
+    ${EXTERNAL_ROOT}/SPIRV-Reflect
+    ${EXTERNAL_ROOT}/FBX/Include
+    ${EXTERNAL_ROOT}/tinyobjloader
+    ${EXTERNAL_ROOT}/glm
+    ${EXTERNAL_ROOT}/glfw/Include
+    ${EXTERNAL_ROOT}/VulkanSDK/Include
+    ${EXTERNAL_ROOT}/stb-master
+    ${EXTERNAL_ROOT}/boost/Include
+    ${EXTERNAL_ROOT}/imgui
+    ${LIBRARY_ROOT}/ShaderConductor/Include
 )
 target_include_directories(EggyEngine PUBLIC ${ADDITIONAL_INCLUDE_DIR})
 
 # additional library directories
 set(
     ADDITIONAL_LIB_DIR
-    ${LIBRARY_DIR}/boost/Lib
-    ${LIBRARY_DIR}/glfw/Lib
-    ${LIBRARY_DIR}/VulkanSDK/Lib
-    ${LIBRARY_DIR}/FBX/Lib
+    ${EXTERNAL_ROOT}/boost/Lib
+    ${EXTERNAL_ROOT}/glfw/Lib
+    ${EXTERNAL_ROOT}/VulkanSDK/Lib
+    ${EXTERNAL_ROOT}/FBX/Lib
 )
-target_link_directories(EggyEngine PUBLIC ${ADDITIONAL_LIB_DIR})
+target_link_directories(${PROJECT_NAME} PUBLIC ${ADDITIONAL_LIB_DIR})
 
 # addtional dependencies
 set(
@@ -61,8 +64,15 @@ set(
     dxguid.lib
     D3DCompiler.lib
     winmm.lib
+    ShaderConductor.lib
 )
 target_link_libraries(EggyEngine ${ADDITIONAL_DEP_LIB})
 
 # other feature
 target_compile_features(EggyEngine PRIVATE cxx_std_20)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Eggy")
+
+# add_subdirectory(${LIBRARY_ROOT}/ShaderConductor)
+
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
